--- a/.github/workflows/build-openwrt-with-official.yml
+++ b/.github/workflows/build-openwrt-with-official.yml
@@ -181,7 +181,7 @@ jobs:
           tag: ${{ steps.compile.outputs.build_tag }}
           artifacts: ${{ env.PACKAGED_OUTPUTPATH }}/*
           allowUpdates: true
-          token: ${{ secrets.GitHub_TOKEN }}
+          token: ${{ secrets.GH_TOKEN }}
           body: |
             This is OpenWrt firmware for Amlogic s9xxx tv box
             * Firmware information
