--- a/router-config/openwrt-imagebuilder/config
+++ b/router-config/openwrt-imagebuilder/config
@@ -75,8 +75,8 @@ CONFIG_DEFAULT_nftables=y
 CONFIG_DEFAULT_odhcp6c=y
 CONFIG_DEFAULT_odhcpd-ipv6only=y
 CONFIG_DEFAULT_opkg=y
-# CONFIG_DEFAULT_ppp is not set
-# CONFIG_DEFAULT_ppp-mod-pppoe is not set
+CONFIG_DEFAULT_ppp=y
+CONFIG_DEFAULT_ppp-mod-pppoe=y
 CONFIG_DEFAULT_procd=y
 CONFIG_DEFAULT_procd-ujail=y
 CONFIG_DEFAULT_uci=y
@@ -1747,7 +1747,7 @@ CONFIG_PACKAGE_libiwinfo-data=y
 
 # CONFIG_PACKAGE_aircard-pcmcia-firmware is not set
 # CONFIG_PACKAGE_amdgpu-firmware is not set
-# CONFIG_PACKAGE_ar3k-firmware is not set
+CONFIG_PACKAGE_ar3k-firmware=m
 # CONFIG_PACKAGE_ath10k-board-qca4019 is not set
 # CONFIG_PACKAGE_ath10k-board-qca9377 is not set
 # CONFIG_PACKAGE_ath10k-board-qca9887 is not set
@@ -1780,12 +1780,12 @@ CONFIG_PACKAGE_libiwinfo-data=y
 # CONFIG_PACKAGE_ath10k-firmware-qca99x0-ct-full-htt is not set
 # CONFIG_PACKAGE_ath10k-firmware-qca99x0-ct-htt is not set
 # CONFIG_PACKAGE_ath6k-firmware is not set
-# CONFIG_PACKAGE_ath9k-htc-firmware is not set
-# CONFIG_PACKAGE_b43legacy-firmware is not set
+CONFIG_PACKAGE_ath9k-htc-firmware=m
+CONFIG_PACKAGE_b43legacy-firmware=m
 CONFIG_B43LEGACY_FW_SQUASH=y
 CONFIG_B43LEGACY_FW_SQUASH_COREREVS="1,2,3,4"
-# CONFIG_PACKAGE_bnx2-firmware is not set
-# CONFIG_PACKAGE_bnx2x-firmware is not set
+CONFIG_PACKAGE_bnx2-firmware=m
+CONFIG_PACKAGE_bnx2x-firmware=m
 # CONFIG_PACKAGE_brcmfmac-firmware-4329-sdio is not set
 # CONFIG_PACKAGE_brcmfmac-firmware-43430-sdio-rpi-3b is not set
 # CONFIG_PACKAGE_brcmfmac-firmware-43430-sdio-rpi-zero-w is not set
@@ -1795,9 +1795,9 @@ CONFIG_B43LEGACY_FW_SQUASH_COREREVS="1,2,3,4"
 # CONFIG_PACKAGE_brcmfmac-firmware-43602a1-pcie is not set
 # CONFIG_PACKAGE_brcmfmac-firmware-4366b1-pcie is not set
 # CONFIG_PACKAGE_brcmfmac-firmware-4366c0-pcie is not set
-# CONFIG_PACKAGE_brcmfmac-firmware-usb is not set
+CONFIG_PACKAGE_brcmfmac-firmware-usb=m
 # CONFIG_PACKAGE_brcmsmac-firmware is not set
-# CONFIG_PACKAGE_carl9170-firmware is not set
+CONFIG_PACKAGE_carl9170-firmware=m
 # CONFIG_PACKAGE_cypress-firmware-43012-sdio is not set
 # CONFIG_PACKAGE_cypress-firmware-43340-sdio is not set
 # CONFIG_PACKAGE_cypress-firmware-43362-sdio is not set
@@ -1843,40 +1843,40 @@ CONFIG_PACKAGE_iwl4965-firmware=m
 CONFIG_PACKAGE_libertas-sdio-firmware=m
 CONFIG_PACKAGE_libertas-spi-firmware=m
 CONFIG_PACKAGE_libertas-usb-firmware=m
-# CONFIG_PACKAGE_mt7601u-firmware is not set
+CONFIG_PACKAGE_mt7601u-firmware=m
 # CONFIG_PACKAGE_mt7622bt-firmware is not set
-# CONFIG_PACKAGE_mwifiex-pcie-firmware is not set
-# CONFIG_PACKAGE_mwifiex-sdio-firmware is not set
-# CONFIG_PACKAGE_mwl8k-firmware is not set
-# CONFIG_PACKAGE_p54-pci-firmware is not set
+CONFIG_PACKAGE_mwifiex-pcie-firmware=m
+CONFIG_PACKAGE_mwifiex-sdio-firmware=m
+CONFIG_PACKAGE_mwl8k-firmware=m
+CONFIG_PACKAGE_p54-pci-firmware=m
 # CONFIG_PACKAGE_p54-spi-firmware is not set
-# CONFIG_PACKAGE_p54-usb-firmware is not set
-# CONFIG_PACKAGE_prism54-firmware is not set
-# CONFIG_PACKAGE_r8152-firmware is not set
-# CONFIG_PACKAGE_r8169-firmware is not set
+CONFIG_PACKAGE_p54-usb-firmware=m
+CONFIG_PACKAGE_prism54-firmware=m
+CONFIG_PACKAGE_r8152-firmware=m
+CONFIG_PACKAGE_r8169-firmware=m
 # CONFIG_PACKAGE_radeon-firmware is not set
-# CONFIG_PACKAGE_rs9113-firmware is not set
+CONFIG_PACKAGE_rs9113-firmware=m
 CONFIG_PACKAGE_rt2800-pci-firmware=m
 CONFIG_PACKAGE_rt2800-usb-firmware=m
-# CONFIG_PACKAGE_rt61-pci-firmware is not set
-# CONFIG_PACKAGE_rt73-usb-firmware is not set
+CONFIG_PACKAGE_rt61-pci-firmware=m
+CONFIG_PACKAGE_rt73-usb-firmware=m
 # CONFIG_PACKAGE_rtl8188eu-firmware is not set
-# CONFIG_PACKAGE_rtl8192ce-firmware is not set
-# CONFIG_PACKAGE_rtl8192cu-firmware is not set
-# CONFIG_PACKAGE_rtl8192de-firmware is not set
+CONFIG_PACKAGE_rtl8192ce-firmware=m
+CONFIG_PACKAGE_rtl8192cu-firmware=m
+CONFIG_PACKAGE_rtl8192de-firmware=m
 # CONFIG_PACKAGE_rtl8192eu-firmware is not set
-# CONFIG_PACKAGE_rtl8192se-firmware is not set
+CONFIG_PACKAGE_rtl8192se-firmware=m
 # CONFIG_PACKAGE_rtl8723au-firmware is not set
 # CONFIG_PACKAGE_rtl8723bu-firmware is not set
-# CONFIG_PACKAGE_rtl8821ae-firmware is not set
+CONFIG_PACKAGE_rtl8821ae-firmware=m
 # CONFIG_PACKAGE_rtl8822be-firmware is not set
 # CONFIG_PACKAGE_rtl8822ce-firmware is not set
 # CONFIG_PACKAGE_ti-3410-firmware is not set
 # CONFIG_PACKAGE_ti-5052-firmware is not set
-# CONFIG_PACKAGE_wil6210-firmware is not set
-# CONFIG_PACKAGE_wireless-regdb is not set
-# CONFIG_PACKAGE_wl12xx-firmware is not set
-# CONFIG_PACKAGE_wl18xx-firmware is not set
+CONFIG_PACKAGE_wil6210-firmware=m
+CONFIG_PACKAGE_wireless-regdb=m
+CONFIG_PACKAGE_wl12xx-firmware=m
+CONFIG_PACKAGE_wl18xx-firmware=m
 # end of Firmware
 
 #
@@ -2441,11 +2441,11 @@ CONFIG_PACKAGE_kmod-swconfig=m
 CONFIG_PACKAGE_kmod-switch-bcm53xx=m
 CONFIG_PACKAGE_kmod-switch-bcm53xx-mdio=m
 CONFIG_PACKAGE_kmod-switch-ip17xx=m
-# CONFIG_PACKAGE_kmod-switch-rtl8306 is not set
-# CONFIG_PACKAGE_kmod-switch-rtl8366-smi is not set
-# CONFIG_PACKAGE_kmod-switch-rtl8366rb is not set
-# CONFIG_PACKAGE_kmod-switch-rtl8366s is not set
-# CONFIG_PACKAGE_kmod-switch-rtl8367b is not set
+CONFIG_PACKAGE_kmod-switch-rtl8306=m
+CONFIG_PACKAGE_kmod-switch-rtl8366-smi=m
+CONFIG_PACKAGE_kmod-switch-rtl8366rb=m
+CONFIG_PACKAGE_kmod-switch-rtl8366s=m
+CONFIG_PACKAGE_kmod-switch-rtl8367b=m
 CONFIG_PACKAGE_kmod-tg3=m
 CONFIG_PACKAGE_kmod-tulip=m
 CONFIG_PACKAGE_kmod-via-rhine=m
@@ -2517,11 +2517,11 @@ CONFIG_PACKAGE_kmod-openvswitch-vxlan-intree=m
 CONFIG_PACKAGE_kmod-ovpn-dco=m
 CONFIG_PACKAGE_kmod-pf-ring=m
 CONFIG_PACKAGE_kmod-pktgen=m
-# CONFIG_PACKAGE_kmod-ppp is not set
+CONFIG_PACKAGE_kmod-ppp=y
 CONFIG_PACKAGE_kmod-mppe=m
 CONFIG_PACKAGE_kmod-ppp-synctty=m
 CONFIG_PACKAGE_kmod-pppoa=m
-# CONFIG_PACKAGE_kmod-pppoe is not set
+CONFIG_PACKAGE_kmod-pppoe=y
 CONFIG_PACKAGE_kmod-pppol2tp=m
 CONFIG_PACKAGE_kmod-pppox=y
 CONFIG_PACKAGE_kmod-pptp=m
@@ -2689,6 +2689,33 @@ CONFIG_PACKAGE_kmod-usb-ehci=m
 CONFIG_PACKAGE_kmod-usb-hid=m
 CONFIG_PACKAGE_kmod-usb-hid-cp2112=m
 CONFIG_PACKAGE_kmod-usb-ledtrig-usbport=m
+CONFIG_PACKAGE_kmod-usb-net=m
+CONFIG_PACKAGE_kmod-usb-net-aqc111=m
+CONFIG_PACKAGE_kmod-usb-net-asix=m
+CONFIG_PACKAGE_kmod-usb-net-asix-ax88179=m
+CONFIG_PACKAGE_kmod-usb-net-cdc-eem=m
+CONFIG_PACKAGE_kmod-usb-net-cdc-ether=m
+CONFIG_PACKAGE_kmod-usb-net-cdc-mbim=m
+CONFIG_PACKAGE_kmod-usb-net-cdc-ncm=m
+CONFIG_PACKAGE_kmod-usb-net-cdc-subset=m
+CONFIG_PACKAGE_kmod-usb-net-dm9601-ether=m
+CONFIG_PACKAGE_kmod-usb-net-hso=m
+CONFIG_PACKAGE_kmod-usb-net-huawei-cdc-ncm=m
+CONFIG_PACKAGE_kmod-usb-net-ipheth=m
+CONFIG_PACKAGE_kmod-usb-net-kalmia=m
+CONFIG_PACKAGE_kmod-usb-net-kaweth=m
+CONFIG_PACKAGE_kmod-usb-net-lan78xx=m
+CONFIG_PACKAGE_kmod-usb-net-mcs7830=m
+CONFIG_PACKAGE_kmod-usb-net-pegasus=m
+CONFIG_PACKAGE_kmod-usb-net-pl=m
+CONFIG_PACKAGE_kmod-usb-net-qmi-wwan=m
+CONFIG_PACKAGE_kmod-usb-net-rndis=m
+CONFIG_PACKAGE_kmod-usb-net-rtl8150=m
+CONFIG_PACKAGE_kmod-usb-net-rtl8152=m
+CONFIG_PACKAGE_kmod-usb-net-sierrawireless=m
+CONFIG_PACKAGE_kmod-usb-net-smsc75xx=m
+CONFIG_PACKAGE_kmod-usb-net-smsc95xx=m
+CONFIG_PACKAGE_kmod-usb-net-sr9700=m
 CONFIG_PACKAGE_kmod-usb-ohci=m
 CONFIG_PACKAGE_kmod-usb-ohci-pci=m
 CONFIG_PACKAGE_kmod-usb-printer=m
@@ -2710,9 +2737,13 @@ CONFIG_PACKAGE_kmod-usb-serial-mos7720=m
 CONFIG_PACKAGE_kmod-usb-serial-mos7840=m
 CONFIG_PACKAGE_kmod-usb-serial-option=m
 CONFIG_PACKAGE_kmod-usb-serial-oti6858=m
+CONFIG_PACKAGE_kmod-usb-serial-pl2303=m
+CONFIG_PACKAGE_kmod-usb-serial-qualcomm=m
+CONFIG_PACKAGE_kmod-usb-serial-sierrawireless=m
 CONFIG_PACKAGE_kmod-usb-serial-simple=m
 CONFIG_PACKAGE_kmod-usb-serial-ti-usb=m
 CONFIG_PACKAGE_kmod-usb-serial-visor=m
+CONFIG_PACKAGE_kmod-usb-serial-wwan=m
 CONFIG_PACKAGE_kmod-usb-serial-xr_usb_serial_common=m
 CONFIG_PACKAGE_kmod-usb-storage=m
 CONFIG_PACKAGE_kmod-usb-storage-extras=m
@@ -2833,7 +2864,167 @@ CONFIG_PACKAGE_kmod-mrf24j40=m
 # end of WPAN 802.15.4 Support
 
 #
-
+# Wireless Drivers
+#
+CONFIG_PACKAGE_kmod-adm8211=m
+CONFIG_PACKAGE_kmod-ar5523=m
+CONFIG_PACKAGE_kmod-ath=m
+CONFIG_ATH_USER_REGD=y
+# CONFIG_PACKAGE_ATH_DEBUG is not set
+CONFIG_PACKAGE_ATH_DFS=y
+# CONFIG_PACKAGE_ATH_DYNACK is not set
+CONFIG_PACKAGE_kmod-ath10k=m
+CONFIG_ATH10K_LEDS=y
+# CONFIG_ATH10K_THERMAL is not set
+CONFIG_PACKAGE_kmod-ath10k-ct=m
+CONFIG_ATH10K-CT_LEDS=y
+CONFIG_PACKAGE_kmod-ath10k-ct-smallbuffers=m
+CONFIG_PACKAGE_kmod-ath10k-smallbuffers=m
+CONFIG_PACKAGE_kmod-ath5k=m
+CONFIG_PACKAGE_kmod-ath6kl=m
+CONFIG_PACKAGE_kmod-ath6kl-sdio=m
+CONFIG_PACKAGE_kmod-ath6kl-usb=m
+CONFIG_PACKAGE_kmod-ath9k=m
+# CONFIG_ATH9K_HWRNG is not set
+# CONFIG_ATH9K_SUPPORT_PCOEM is not set
+# CONFIG_ATH9K_TX99 is not set
+CONFIG_PACKAGE_kmod-ath9k-common=m
+CONFIG_PACKAGE_kmod-ath9k-htc=m
+CONFIG_PACKAGE_kmod-b43=m
+CONFIG_PACKAGE_B43_USE_SSB=m
+CONFIG_PACKAGE_B43_USE_BCMA=m
+# CONFIG_B43_FW_4_150 is not set
+# CONFIG_B43_FW_4_178 is not set
+# CONFIG_B43_FW_5_10 is not set
+CONFIG_B43_FW_5_100_138=y
+# CONFIG_B43_FW_6_30 is not set
+# CONFIG_B43_OPENFIRMWARE is not set
+CONFIG_B43_FW_SQUASH=y
+CONFIG_B43_FW_SQUASH_COREREVS="5,6,7,8,9,10,11,13,15,16,28,29,30"
+CONFIG_B43_FW_SQUASH_PHYTYPES="G,N,LP,HT"
+CONFIG_PACKAGE_B43_BUSES_BCMA_AND_SSB=y
+# CONFIG_PACKAGE_B43_BUSES_BCMA is not set
+# CONFIG_PACKAGE_B43_BUSES_SSB is not set
+# CONFIG_PACKAGE_B43_DEBUG is not set
+# CONFIG_PACKAGE_B43_PIO is not set
+CONFIG_PACKAGE_B43_PHY_G=y
+CONFIG_PACKAGE_B43_PHY_N=y
+CONFIG_PACKAGE_B43_PHY_LP=y
+CONFIG_PACKAGE_B43_PHY_HT=y
+CONFIG_PACKAGE_kmod-b43legacy=m
+CONFIG_PACKAGE_kmod-brcmfmac=m
+# CONFIG_BRCMFMAC_SDIO is not set
+CONFIG_BRCMFMAC_USB=y
+CONFIG_BRCMFMAC_PCIE=y
+CONFIG_PACKAGE_kmod-brcmsmac=m
+CONFIG_BRCMSMAC_USE_FW_FROM_WL=y
+CONFIG_PACKAGE_kmod-brcmutil=m
+# CONFIG_PACKAGE_BRCM80211_DEBUG is not set
+CONFIG_PACKAGE_kmod-carl9170=m
+CONFIG_PACKAGE_kmod-cfg80211=m
+# CONFIG_PACKAGE_CFG80211_TESTMODE is not set
+CONFIG_PACKAGE_kmod-hermes=m
+CONFIG_PACKAGE_kmod-hermes-pci=m
+CONFIG_PACKAGE_kmod-hermes-plx=m
+CONFIG_PACKAGE_kmod-ipw2100=m
+CONFIG_PACKAGE_kmod-ipw2200=m
+CONFIG_PACKAGE_kmod-iwl-legacy=m
+CONFIG_PACKAGE_kmod-iwl3945=m
+CONFIG_PACKAGE_kmod-iwl4965=m
+CONFIG_PACKAGE_kmod-iwlwifi=m
+# CONFIG_PACKAGE_IWLWIFI_DEBUG is not set
+# CONFIG_PACKAGE_IWLWIFI_DEBUGFS is not set
+CONFIG_PACKAGE_kmod-lib80211=m
+CONFIG_PACKAGE_kmod-libertas-sdio=m
+CONFIG_PACKAGE_kmod-libertas-spi=m
+CONFIG_PACKAGE_kmod-libertas-usb=m
+CONFIG_PACKAGE_kmod-libipw=m
+CONFIG_PACKAGE_kmod-mac80211=m
+CONFIG_PACKAGE_MAC80211_DEBUGFS=y
+# CONFIG_PACKAGE_MAC80211_TRACING is not set
+CONFIG_PACKAGE_MAC80211_MESH=y
+CONFIG_PACKAGE_kmod-mac80211-hwsim=m
+CONFIG_PACKAGE_kmod-mt76=m
+CONFIG_PACKAGE_kmod-mt76-connac=m
+CONFIG_PACKAGE_kmod-mt76-core=m
+CONFIG_PACKAGE_kmod-mt76-sdio=m
+CONFIG_PACKAGE_kmod-mt76-usb=m
+CONFIG_PACKAGE_kmod-mt7601u=m
+CONFIG_PACKAGE_kmod-mt7603=m
+CONFIG_PACKAGE_kmod-mt7615-common=m
+CONFIG_PACKAGE_kmod-mt7615-firmware=m
+CONFIG_PACKAGE_kmod-mt7615e=m
+CONFIG_PACKAGE_kmod-mt7663-firmware-ap=m
+CONFIG_PACKAGE_kmod-mt7663-firmware-sta=m
+CONFIG_PACKAGE_kmod-mt7663-usb-sdio=m
+CONFIG_PACKAGE_kmod-mt7663s=m
+CONFIG_PACKAGE_kmod-mt7663u=m
+CONFIG_PACKAGE_kmod-mt76x0-common=m
+CONFIG_PACKAGE_kmod-mt76x02-common=m
+CONFIG_PACKAGE_kmod-mt76x02-usb=m
+CONFIG_PACKAGE_kmod-mt76x0e=m
+CONFIG_PACKAGE_kmod-mt76x0u=m
+CONFIG_PACKAGE_kmod-mt76x2=m
+CONFIG_PACKAGE_kmod-mt76x2-common=m
+CONFIG_PACKAGE_kmod-mt76x2u=m
+CONFIG_PACKAGE_kmod-mt7915e=m
+CONFIG_PACKAGE_kmod-mt7916-firmware=m
+CONFIG_PACKAGE_kmod-mt7921-common=m
+CONFIG_PACKAGE_kmod-mt7921-firmware=m
+CONFIG_PACKAGE_kmod-mt7921e=m
+CONFIG_PACKAGE_kmod-mt7921s=m
+CONFIG_PACKAGE_kmod-mt7921u=m
+CONFIG_PACKAGE_kmod-mwifiex-pcie=m
+CONFIG_PACKAGE_kmod-mwifiex-sdio=m
+CONFIG_PACKAGE_kmod-mwl8k=m
+CONFIG_PACKAGE_kmod-net-prism54=m
+CONFIG_PACKAGE_kmod-owl-loader=m
+CONFIG_PACKAGE_kmod-p54-common=m
+CONFIG_PACKAGE_kmod-p54-pci=m
+CONFIG_PACKAGE_kmod-p54-usb=m
+CONFIG_PACKAGE_kmod-rsi91x=m
+CONFIG_PACKAGE_kmod-rsi91x-sdio=m
+CONFIG_PACKAGE_kmod-rsi91x-usb=m
+CONFIG_PACKAGE_kmod-rt2400-pci=m
+CONFIG_PACKAGE_kmod-rt2500-pci=m
+CONFIG_PACKAGE_kmod-rt2500-usb=m
+CONFIG_PACKAGE_kmod-rt2800-lib=m
+CONFIG_PACKAGE_kmod-rt2800-mmio=m
+CONFIG_PACKAGE_kmod-rt2800-pci=m
+CONFIG_PACKAGE_kmod-rt2800-usb=m
+CONFIG_PACKAGE_kmod-rt2x00-lib=m
+# CONFIG_PACKAGE_RT2X00_LIB_DEBUGFS is not set
+# CONFIG_PACKAGE_RT2X00_DEBUG is not set
+CONFIG_PACKAGE_kmod-rt2x00-mmio=m
+CONFIG_PACKAGE_kmod-rt2x00-pci=m
+CONFIG_PACKAGE_kmod-rt2x00-usb=m
+CONFIG_PACKAGE_kmod-rt61-pci=m
+CONFIG_PACKAGE_kmod-rt73-usb=m
+CONFIG_PACKAGE_kmod-rtl8180=m
+CONFIG_PACKAGE_kmod-rtl8187=m
+CONFIG_PACKAGE_kmod-rtl8192c-common=m
+CONFIG_PACKAGE_kmod-rtl8192ce=m
+CONFIG_PACKAGE_kmod-rtl8192cu=m
+CONFIG_PACKAGE_kmod-rtl8192de=m
+CONFIG_PACKAGE_kmod-rtl8192se=m
+CONFIG_PACKAGE_kmod-rtl8723bs=m
+CONFIG_PACKAGE_kmod-rtl8812au-ct=m
+CONFIG_PACKAGE_kmod-rtl8821ae=m
+CONFIG_PACKAGE_kmod-rtl8xxxu=m
+CONFIG_PACKAGE_kmod-rtlwifi=m
+# CONFIG_PACKAGE_RTLWIFI_DEBUG is not set
+CONFIG_PACKAGE_kmod-rtlwifi-btcoexist=m
+CONFIG_PACKAGE_kmod-rtlwifi-pci=m
+CONFIG_PACKAGE_kmod-rtlwifi-usb=m
+CONFIG_PACKAGE_kmod-rtw88=m
+# CONFIG_PACKAGE_RTW88_DEBUG is not set
+# CONFIG_PACKAGE_RTW88_DEBUGFS is not set
+CONFIG_PACKAGE_kmod-wil6210=m
+CONFIG_PACKAGE_kmod-wl12xx=m
+CONFIG_PACKAGE_kmod-wl18xx=m
+CONFIG_PACKAGE_kmod-wlcore=m
+CONFIG_PACKAGE_kmod-zd1211rw=m
+# end of Wireless Drivers
 
 CONFIG_PACKAGE_kmod-cdrom=m
 # end of Kernel modules
@@ -4440,7 +4631,7 @@ CONFIG_PACKAGE_luci-proto-ipv6=y
 # CONFIG_PACKAGE_luci-proto-nebula is not set
 # CONFIG_PACKAGE_luci-proto-openconnect is not set
 # CONFIG_PACKAGE_luci-proto-openfortivpn is not set
-# CONFIG_PACKAGE_luci-proto-ppp is not set
+CONFIG_PACKAGE_luci-proto-ppp=y
 # CONFIG_PACKAGE_luci-proto-pppossh is not set
 # CONFIG_PACKAGE_luci-proto-qmi is not set
 # CONFIG_PACKAGE_luci-proto-relay is not set
@@ -5551,7 +5742,7 @@ CONFIG_PACKAGE_iw=m
 CONFIG_PACKAGE_odhcp6c=y
 CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
 # CONFIG_PACKAGE_odhcpd is not set
-CONFIG_PACKAGE_odhcpd-ipv6only=y
+# CONFIG_PACKAGE_odhcpd-ipv6only is not set
 
 #
 # Configuration
@@ -5574,10 +5765,10 @@ CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
 # CONFIG_PACKAGE_pimbd is not set
 # CONFIG_PACKAGE_pingcheck is not set
 # CONFIG_PACKAGE_port-mirroring is not set
-# CONFIG_PACKAGE_ppp is not set
+CONFIG_PACKAGE_ppp=y
 # CONFIG_PACKAGE_ppp-mod-passwordfd is not set
 # CONFIG_PACKAGE_ppp-mod-pppoa is not set
-# CONFIG_PACKAGE_ppp-mod-pppoe is not set
+CONFIG_PACKAGE_ppp-mod-pppoe=y
 # CONFIG_PACKAGE_ppp-mod-pppol2tp is not set
 # CONFIG_PACKAGE_ppp-mod-pptp is not set
 # CONFIG_PACKAGE_ppp-mod-radius is not set
@@ -5668,7 +5859,7 @@ CONFIG_PACKAGE_uclient-fetch=y
 # CONFIG_PACKAGE_wakeonlan is not set
 # CONFIG_PACKAGE_wg-installer-client is not set
 # CONFIG_PACKAGE_wpan-tools is not set
-CONFIG_PACKAGE_wwan=m
+# CONFIG_PACKAGE_wwan is not set
 # CONFIG_PACKAGE_xfrm is not set
 # CONFIG_PACKAGE_xinetd is not set
 # CONFIG_PACKAGE_xray-core is not set
