--- a/.github/workflows/build-openwrt-with-imagebuilder.yml
+++ b/.github/workflows/build-openwrt-with-imagebuilder.yml
@@ -62,8 +62,8 @@ on:
           - 6.1.1
       auto_kernel:
         description: "Auto use the latest kernel"
-        required: true
-        default: true
+        required: false
+        default: false
         type: boolean
       kernel_repo:
         description: "Set the kernel repository"
@@ -72,7 +72,7 @@ on:
       openwrt_size:
         description: "Set the rootfs size(Unit: MiB)"
         required: true
-        default: "1024"
+        default: "4096"
 
 env:
   TZ: America/New_York
@@ -143,7 +143,7 @@ jobs:
           body: |
             This is OpenWrt firmware for Amlogic s9xxx tv box
             * Firmware information
-            Default IP: 10.0.0.1
+            Default IP: 192.168.1.1
             Default username: root
             Default password: password
             Default WIFI name: OpenWrt
