--- a/.github/workflows/build-openwrt-with-imagebuilder.yml
+++ b/.github/workflows/build-openwrt-with-imagebuilder.yml
@@ -62,8 +62,8 @@ on:
           - 6.1.1
       auto_kernel:
         description: "Auto use the latest kernel"
-        required: false
-        default: false
+        required: true
+        default: true
         type: boolean
       kernel_repo:
         description: "Set the kernel repository"
