--- a/router-config/openwrt-imagebuilder/config
+++ b/router-config/openwrt-imagebuilder/config
@@ -27,5 +27,5 @@ CONFIG_PACKAGE_luci-theme-bootstrap=y
 # end of 3. Translate
 #
 # 4. Other Configuration
-CONFIG_BUSYBOX_DEFAULT_FALLOCATE=y
+###CONFIG_BUSYBOX_DEFAULT_FALLOCATE=y
 # end of 4. Other Configuration
