--- a/.github/workflows/build-openwrt-with-imagebuilder.yml
+++ b/.github/workflows/build-openwrt-with-imagebuilder.yml
@@ -14,7 +14,7 @@ on:
       branch:
         description: "Select the releases branch"
         required: false
-        default: "22.03.3"
+        default: "21.02.5"
         type: choice
         options:
           - 22.03.3
@@ -24,7 +24,7 @@ on:
       openwrt_board:
         description: "Select Amlogic board"
         required: false
-        default: "s905x3_s905d_s912"
+        default: "s905x"
         type: choice
         options:
           - all
